# Ruddit-Client

./: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
src/: package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/actions/: mod.rs  open_folder.rs
src-tauri/src/ai/: adapter.rs  gemini.rs  mod.rs
src-tauri/src/arguments/: modeling.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: adding.rs  mod.rs  read.rs
src-tauri/src/email/: sending.rs
src-tauri/src/exports/: excel.rs
src-tauri/src/models/: auth.rs  mod.rs  search.rs
src-tauri/src/settings/: api_keys.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Actions.tsx  Filters.tsx  RedditTableHeader.tsx  ai-analysis-modal.tsx  ai-data-chat.tsx  ai-prompt-panel.tsx  app-settings-clean.tsx  app-settings-new.tsx  app-settings.tsx  automation-runner.tsx  automation-tab.tsx  bulk-reply-generator.tsx  config-modal.tsx  config-panel.tsx  header.tsx  keyword-highlighter.tsx  leads-generator.tsx  mentions-chart.tsx  mentions-feed.tsx  messages-table.tsx  reddit-comments-view.tsx  reddit-search.tsx  reddit-table-constants.ts  reddit-table-types.ts  reddit-table-utils.tsx  reddit-table.tsx  smart-data-tables.tsx  stats-overview.tsx  subreddits-list.tsx  useDataManagement.ts  useRedditTableState.ts
src/components/automation/: automation-control-panel.tsx  automation-logs-panel.tsx  automation-results-table.tsx  automation-selection-dialog.tsx  automation-sensors-panel.tsx  automation-utils.tsx
src/components/reddit-search/: README.md  export-utils.ts  filter-utils.ts  import-utils.ts  index.ts  (+4 more)
src/hooks/: useOpenUrl.ts
src/lib/: marketing-utils.ts  reddit-utils.ts
src/store/: ai-chat-store.ts  settings-store.ts  store.ts
(+13 files in other folders)
