[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
directories = "*"
toml = "0.9"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0.85"
chrono = "0.4.41"
dotenv = "0.15.0"
clap = { version = "4.0.29", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
rust_xlsxwriter = "0.89"
gemini-rust = "1.1"
anyhow = "1.0.65"
log = "0.4.17"
tauri-plugin-opener = "2"
resend-rs = "0.19"
regex = "1.10.5"
